home page
it shows friends and suggested friends ... need some modification !!